타입스크립트까지 설정완료

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "strict": true,
-    "lib": ["es2020", "dom"],
+    "target": "es5",
     "jsx": "react",
+    "module": "CommonJS",
     "esModuleInterop": true
   }
 }
